add GetUniqueAuthor endpoint
